feat: standardize on Python 3.12 across all environments
- Update CI matrix to use Python 3.12 only for consistency
- Update setup-python action to v5 for better 3.12 support
- Set ruff target-version to py312 for modern Python features
- Configure VSCode to use python3.12 interpreter
- Verified all 46 tests pass with Python 3.12
- Simplify CI pipeline while using stable, modern Python version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
     "sakurazaka"
   ],
   // Python 設定
-  "python.defaultInterpreterPath": "./venv/bin/python",
+  "python.defaultInterpreterPath": "python3.12",
   // フォーマッター設定 - Ruffを使用
   "[python]": {
     "editor.defaultFormatter": "charliermarsh.ruff",
