fix: mypy setting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Type check with mypy
         run: |
-          mypy src --ignore-missing-imports --disable-error-code=import
+          mypy src
 
       - name: Test with pytest
         run: |
