--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ use_parentheses = true
 ensure_newline_before_comments = true
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
@@ -39,6 +39,9 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
+# VSCodeとの一貫性のためにimportエラーを無視
+ignore_missing_imports = true
+disable_error_code = ["import"]
 
 [[tool.mypy.overrides]]
 module = [
