refactor: linter, formatterをruffに統一

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,13 +19,19 @@
     "mypy",
     "nohup",
     "noqa",
+    "nosec",
+    "pycodestyle",
+    "pyflakes",
+    "pylint",
     "pyproject",
     "pytest",
+    "pyupgrade",
     "ruff",
     "sakura",
     "sakurazaka",
     "secretmanager",
     "toml",
+    "tryceratops",
     "urlencode",
     "webhook"
   ],
