--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,55 +1,6 @@
-[tool.black]
-line-length = 127
-target-version = ['py39']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-    \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
-
-[tool.isort]
-profile = "black"
-line_length = 127
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-
-[tool.mypy]
-python_version = "3.12"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = false
-disallow_incomplete_defs = false
-check_untyped_defs = true
-disallow_untyped_decorators = false
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_equality = true
-# VSCodeとの一貫性のためにimportエラーを無視
-ignore_missing_imports = true
-disable_error_code = ["import"]
-
-[[tool.mypy.overrides]]
-module = [
-    "google.*",
-    "responses.*",
-    "pytest.*"
-]
-ignore_missing_imports = true
+# Ruffに統一したため、black、isort、mypyの設定は削除
+# mypyのみ型チェックのために残すかはプロジェクトの要件次第
+# 現在はruffでlintingとformattingを統一
 
 [tool.bandit]
 exclude_dirs = ["tests"]
@@ -91,18 +42,42 @@ exclude = [
 
 [tool.ruff.lint]
 select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "C4", # flake8-comprehensions
-    "UP", # pyupgrade
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+    "N",   # pep8-naming
+    "S",   # flake8-bandit (security)
+    "T20", # flake8-print
+    "PT",  # flake8-pytest-style
+    "Q",   # flake8-quotes
+    "RET", # flake8-return
+    "SIM", # flake8-simplify
+    "TID", # flake8-tidy-imports
+    "ARG", # flake8-unused-arguments
+    "ERA", # eradicate (commented code)
+    "PL",  # pylint
+    "TRY", # tryceratops
 ]
 ignore = [
     "E501",  # line too long (handled by formatter)
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
+    "S101",  # use of assert (OK in tests)
+    "S104",  # hardcoded bind all interfaces (OK for Cloud Run)
+    "S105",  # hardcoded password (handled by nosec comments)
+    "PLR0913", # too many arguments
+    "PLR2004", # magic value used in comparison
+    "TRY003",  # avoid specifying messages outside exception class
+    "TRY300",  # consider moving to else block
+    "PT009",   # use regular assert
+    "ERA001",  # commented-out code (some comments are intentional)
+    "PLC0415", # import outside toplevel (OK for tests)
+    "SIM117",  # combine with statements (sometimes clearer separately)
+    "ARG002",  # unused method argument (OK for test fixtures)
 ]
 
 [tool.ruff.format]
