add: スペル辞書とmypyの追加設定を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,25 +12,32 @@
     "doseq",
     "dotenv",
     "gcloud",
+    "htmlcov",
+    "isort",
     "joqr",
     "Lemino",
     "levelname",
     "nohup",
     "noqa",
     "nosec",
+    "pycache",
     "pycodestyle",
     "pyflakes",
     "pylint",
     "pyproject",
     "pytest",
+    "PYTHONPATH",
     "pyupgrade",
+    "repr",
     "ruff",
     "sakura",
     "sakurazaka",
     "secretmanager",
     "toml",
+    "toplevel",
     "tryceratops",
     "urlencode",
+    "venv",
     "webhook"
   ],
   // Python 設定
@@ -52,6 +59,11 @@
   // Ruff設定ファイルを明示的に指定
   "ruff.configurationPreference": "filesystemFirst",
   "ruff.importStrategy": "fromEnvironment",
+  // Mypy 設定
+  "mypy-type-checker.args": [
+    "--ignore-missing-imports",
+    "--disable-error-code=import"
+  ],
   // エディター設定
   "editor.rulers": [
     127
